--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 * text=auto !eol
 /Makefile -text
 /apertium-sin.sin.dix -text
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
